--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,20 @@ body {
     background-color: 2c2a2a;
     color: white;
     font-family: playfair display;
+    padding: 10 40px;
+}
+
+nav {
+    height: 10vh;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 h1 {
@@ -11,12 +25,68 @@ h1 {
 
 p {
     font-family: "inter", sans-serif;
+    font-size: 20px;
 }
 
 #nav {
     list-style-type: none;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    color: white;
 }
 
 #name {
     color: #D9BEA5;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 57.6px;
 }   
+
+#mainheader {
+    font-weight: 400;
+    font-size: 128px;
+}
+
+#portfolio {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 102.4px;
+
+}
+
+#about {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 102.4px;
+}
+
+#get-in-touch {
+    font-weight: 400;
+    font-size: 128px;
+    line-height: 153.6px;
+    text-align: center;
+}
+
+.button {
+    justify-content: center;
+    border-color: #D9BEA5;
+    border-width: 321px;
+    border: solid 1px;
+    display: block;
+    text-align: center;
+    background-color: 2c2a2a;
+    padding: 10px 20px;
+    box-sizing:content-box;
+    color: white;
+}
+
+footer {
+    padding: 50px;
+    text-align: center;
+}
+
+img.resize {
+    width: 100px;
+    height: auto;
+}
