--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: 2c2a2a;
     color: white;
     font-family: playfair display;
-    padding: 10 40px;
+    padding: 40px;
     width: auto;
     margin-left: auto;
     margin-right: auto;
@@ -63,22 +63,19 @@ p {
     line-height: 102.4px;
 }
 
-.float-container {
-    border: 3px solid #fff;
-    padding: 100px;
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.float-child.left {
-    width: 49%;
-    float: left;
+.flex-container2 {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-}  
-
-.float-child.right {
-    width: 49%;
-    float: left;
-    justify-content: center;
-}  
+    align-content: center;
+}
 
 .box {
     font-weight: 400;
@@ -142,4 +139,35 @@ footer {
 img.resize {
     width: 458px;
     height: 558px;
+}
+
+.grid-container{
+    padding: 10px;
+    display: grid;
+    grid-template-areas:
+    "PROJECT1 PROJECT2 PROJECT3"
+    "PROJECT4 PROJECT5 PROJECT6" ;
+    grid-gap: 10px;
+}
+
+h2Project1 {
+    grid-area: PROJECT1;
+}
+h2Project2 {
+    grid-area: PROJECT2;
+}
+h2Project3 {
+    grid-area: PROJECT3;
+}
+
+h2Project4 {
+    grid-area: PROJECT4;
+}
+
+h2Project5 {
+    grid-area: PROJECT5;
+}
+
+h2Project6 {
+    grid-area: PROJECT6;
 }
