--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,10 @@ p {
 
 .flex-container2 {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
+    justify-content: space-around;
+    align-items:flex-start;
 }
 
 .leftside {
@@ -90,7 +91,6 @@ p {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 33%;
-    padding: 50px;
 }
 
 .rightside {
@@ -99,9 +99,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 33%;
-    padding: 50px;
 }
-
 
 .box {
     font-weight: 400;
@@ -157,7 +155,8 @@ p {
 
 img.resize {
     width: 458px;
-    height: 558px;
+    height: 568px;
+    padding: 100px;
 }
 
 
@@ -165,11 +164,12 @@ img.resize {
 
 .grid-container{
     padding: 10px;
+    width: 75%;
     display: grid;
     grid-template-areas:
     "PROJECT1 PROJECT2 PROJECT3"
     "PROJECT4 PROJECT5 PROJECT6" ;
-    grid-gap: 50px;
+    grid-gap: 20px;
 }
 
 h2Project1 {
