--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
-
 body {
     background-color: 2c2a2a;
     color: white;
     font-family: playfair display;
-    padding: 40px;
     width: auto;
     margin-left: auto;
     margin-right: auto;
+}
+
+main {
+    padding: 0px 40px;
+    margin: 0;
 }
 
 nav {
@@ -160,7 +163,9 @@ p {
     opacity: 0.5;
 }
 
-
+img.resize:hover {
+    opacity: 1;
+}
 
 img.resize {
     width: 458px;
@@ -172,7 +177,6 @@ img.resize {
 
 
 .grid-container{
-    padding: 10px;
     width: 75%;
     display: grid;
     grid-template-areas:
