--- a/Sass/_sections.scss
+++ b/Sass/_sections.scss
@@ -1,6 +1,6 @@
 .heading {
 
-    __&links{
+    &__links{
         height: 10vh;
         padding: 0 40px;
         display: flex;
@@ -13,7 +13,7 @@
         color: white;
     }
 
-    __&name{
+    &__name{
         font-family: "cormorant", sans-serif;
         color: white;
         font-weight: 700;
@@ -24,7 +24,7 @@
             }
     }
 
-    __&link{
+    &__link{
         font-family: "inter", sans-serif;
     font-size: 20px;
     }
@@ -43,4 +43,31 @@
         justify-content: left;
         width: 50%;
     }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    gap:25px;
+    height: 50px;
+    text-align: center;
+    background-color: #3b3636;
+    float: none;
+    clear: both;
 }
