updates to sass

--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ img.rightside__resize {
     padding: 100px 1px;
 }
 
-
+/*
 footer {
     padding: 50px;
     display: flex;
@@ -248,3 +248,5 @@ footer {
     float: none;
     clear: both;
 }
+
+*/
