--- a/Sass/_sections.scss
+++ b/Sass/_sections.scss
@@ -19,14 +19,19 @@
         font-weight: 700;
         font-size: 48px;
         line-height: 57.6px;
-            h1 span {
+            &__span {
                 color: $color-beige;
             }
     }
 
     &__link{
         font-family: $font-inter;
-    font-size: 20px;
+        font-size: 20px;
+        list-style-type: none;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 32px;
+        color: white;
     }
 }
 
