--- a/Sass/_sections.scss
+++ b/Sass/_sections.scss
@@ -1,3 +1,9 @@
+@use "_styles.scss";
+
+
+/* heading and navigation bar */
+
+
 .heading {
 
     &__links{
@@ -31,9 +37,13 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 32px;
-        color: white;
+        color: $color-white;
     }
 }
+
+
+/* main intro text and subtext */
+
 
 .intro {
 
@@ -51,20 +61,90 @@
 }
 
 
+.portfolio {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 102.4px;
+}
+
+
+.grid-container{
+    width: 75%;
+    display: grid;
+    grid-template-areas:
+    "PROJECT1 PROJECT2 PROJECT3"
+    "PROJECT4 PROJECT5 PROJECT6" ;
+    grid-gap: 20px;
+}
+
+h2Project1 {
+    grid-area: PROJECT1;
+    padding: 10px;
+}
+h2Project2 {
+    grid-area: PROJECT2;
+    padding: 10px;
+
+}
+h2Project3 {
+    grid-area: PROJECT3;
+    padding: 10px;
+}
+
+h2Project4 {
+    grid-area: PROJECT4;
+    padding: 10px;
+}
+
+h2Project5 {
+    grid-area: PROJECT5;
+    padding: 10px;
+}
+
+h2Project6 {
+    grid-area: PROJECT6;
+    padding: 10px;
+}
+
+
+.content-flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px
+}
+.circles {
+    height: 70px;
+}
+
+.ProjectButtons {
+    justify-content: center;
+    font-family: inter, sans-serif;
+    width: 50px;
+    border: 1px;
+    display: block;
+    text-align: center;
+    background-color: #3C3636;
+    padding: 10px 20px;
+    box-sizing:content-box;
+    color: white;
+    margin: 2px auto;
+}
+
+.box {
+    font-weight: 400;
+    font-family: cormorant, sans-serif;
+    font-size: 42px;
+    line-height: 67.2px;
+}
 
 
 
 
 
 
-
-
-
-
-
-
-
-
+/* about section showing header and 2 p tags with an image next to it */
 
 .about-container {
     display: flex;
@@ -94,11 +174,11 @@
         justify-content: space-between;
         width:33%;
     }
-    &__img__resize:hover {
-        opacity: 1;
-    }
     
-    &__img__resize {
+    img.rightside__resize {
+        &:hover {
+            opacity: 1;
+        }
         width: 458px;
         height: 568px;
         padding: 100px 1px;
@@ -107,6 +187,46 @@
 
 
 
+
+/*  code for flexing lists side by side */
+
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+
+
+
+/* contact page and footer code */
+
+.contact {
+    &____h1 {
+        font-weight: 400;
+        font-size: 128px;
+        line-height: 153.6px;
+        text-align: center;
+        height: 80px;
+    }   
+
+    &__button {
+        justify-content: center;
+        border-color: #D9BEA5;
+        width: 100px;
+        border: solid 1px;
+        display: block;
+        text-align: center;
+        background-color: 2c2a2a;
+        padding: 10px 20px;
+        box-sizing:content-box;
+        color: white;
+        margin: 50px auto;
+    }
+}
 
 
 footer {
