--- a/main.css
+++ b/main.css
@@ -232,7 +232,7 @@ img.rightside__resize {
 
 }
 
-.conact__button {
+.contact__button {
     justify-content: center;
     border-color: #D9BEA5;
     width: 100px;
