--- a/Sass/_styles.scss
+++ b/Sass/_styles.scss
@@ -1,48 +1,11 @@
 /* Fonts for sass */
 
-<link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Inter:wght@100&family=Playfair+Display&display=swap" rel="stylesheet">
-
-$font-playfair: "playfair display", sans serif;
-$font-cormorant: "cormorant", sans serif;
-$font-inter: "inter", sans serif;
 $color-white: #fafafa;
 $color-light-grey: #3c3636;
 $color-dark-grey: #2c2a2a;
 $color-beige: #D9BEA5;
 $color-footer: #3b3636
 
-body {
-    background-color: $color-light-grey;
-    color: $color-white;
-    font-family: playfair display;
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-main {
-    padding: 0px 40px;
-    margin: 0;
-}
-
-a:hover {
-    opacity: 0.5;
-}
-
-a:link,
-a:visited {
-  text-decoration: none;
-}
-
-
-
-.button:hover {
-    opacity: 0.5;
-}
-
-
-img:hover {
-    opacity: 0.5;
-}
+$font-playfair: 'Playfair Display', sans-serif;
+$font-cormorant: 'Cormorant', sans-serif;
+$font-inter: 'Inter', sans-serif;
