--- a/main.css
+++ b/main.css
@@ -1,8 +1,44 @@
 @media screen  and (max-width:768px) {
     main {
-        width: 300px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
-}
+
+    .heading {
+        width: 100%;
+        justify-content: space-between;
+    } 
+    
+    .heading__links {
+        width: 100%;
+        display: flex;
+    }
+    
+
+    footer {
+        width: 768px;
+    }
+
+    .grid-container {
+            display: flex;
+            overflow-x: scroll;
+            padding: 24px;
+            width: 300px;
+            scroll-snap-type: x mandatory;
+            scroll-padding: 24px;
+            border-radius: 8px;
+            gap: 12px;
+        }
+        
+    .grid-container .content-flex {
+            flex: 50% 0 100%;
+            padding: 24px;
+            border-radius: 8px;
+            scroll-snap-align: start;
+        }
+    } 
+
 
 body {
     background-color: 2c2a2a;
