--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,56 @@
 @use "./Sass/sections";
 @use "./Sass/styles";
 
+@media screen  and (max-width:768px) {
+    main {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .heading {
+        width: 100%;
+        justify-content: space-between;
+
+        &__links {
+        width: 100%;
+        display: flex;
+    }
+}
+    
+
+    footer {
+        width: 768px;
+    }
+
+    .grid-container {
+            display: flex;
+            overflow-x: scroll;
+            padding: 24px;
+            width: 300px;
+            scroll-snap-type: x mandatory;
+            scroll-padding: 24px;
+            border-radius: 8px;
+            gap: 12px;
+        }
+        
+    .grid-container .content-flex {
+            flex: 50% 0 100%;
+            padding: 24px;
+            border-radius: 8px;
+            scroll-snap-align: start;
+        }
+    } 
+
+
+
+
+
+
+
+
+
+
 body {
     background-color: $color-light-grey;
     color: $color-white;
