--- a/Sass/_styles.scss
+++ b/Sass/_styles.scss
@@ -1,10 +1,10 @@
 /* Fonts for sass */
 
 $color-white: #fafafa;
-$color-light-grey: #3c3636;
+$color-light-grey: #3C3636;
 $color-dark-grey: #2c2a2a;
 $color-beige: #D9BEA5;
-$color-footer: #3b3636
+$color-footer: #3B3636;
 
 $font-playfair: 'Playfair Display', sans-serif;
 $font-cormorant: 'Cormorant', sans-serif;
