--- a/Sass/_sections.css
+++ b/Sass/_sections.css
@@ -33,6 +33,9 @@
 }
 
 /* main intro text and subtext */
+.intro {
+  margin: 40px;
+}
 .intro__mainheader {
   font-weight: 400;
   font-size: 128px;
@@ -46,13 +49,13 @@
 
 /* portfolio caption and code for porftolio grid */
 .portfolio {
+  margin: 40px;
   font-weight: 700;
   font-size: 64px;
   line-height: 102.4px;
 }
 
 .grid-container {
-  width: 60%;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
   grid-gap: 20px;
