--- a/main.css
+++ b/main.css
@@ -33,6 +33,9 @@
 }
 
 /* main intro text and subtext */
+.intro {
+  margin: 40px;
+}
 .intro__mainheader {
   font-weight: 400;
   font-size: 128px;
@@ -46,13 +49,13 @@
 
 /* portfolio caption and code for porftolio grid */
 .portfolio {
+  margin: 40px;
   font-weight: 700;
   font-size: 64px;
   line-height: 102.4px;
 }
 
 .grid-container {
-  width: 75%;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
   grid-gap: 20px;
@@ -60,32 +63,26 @@
 
 h2Project1 {
   grid-area: PROJECT1;
-  padding: 10px;
 }
 
 h2Project2 {
   grid-area: PROJECT2;
-  padding: 10px;
 }
 
 h2Project3 {
   grid-area: PROJECT3;
-  padding: 10px;
 }
 
 h2Project4 {
   grid-area: PROJECT4;
-  padding: 10px;
 }
 
 h2Project5 {
   grid-area: PROJECT5;
-  padding: 10px;
 }
 
 h2Project6 {
   grid-area: PROJECT6;
-  padding: 10px;
 }
 
 .content-flex {
@@ -246,11 +243,6 @@ body {
   width: auto;
   margin-left: auto;
   margin-right: auto;
-}
-
-main {
-  padding: 0px 40px;
-  margin: 20px;
 }
 
 /* link and button styles */
