changes made to mobile

--- a/main.scss
+++ b/main.scss
@@ -36,7 +36,7 @@
         }
         
     .grid-container .content-flex {
-            flex: 50% 0 100%;
+            flex: 50% 0% 100%;
             padding: 24px;
             border-radius: 8px;
             scroll-snap-align: start;
