--- a/main.css
+++ b/main.css
@@ -230,7 +230,7 @@ footer {
   }
 
   .grid-container .content-flex {
-    flex: 50% 0 100%;
+    flex: 50% 0% 100%;
     padding: 24px;
     border-radius: 8px;
     scroll-snap-align: start;
