--- a/main.scss
+++ b/main.scss
@@ -3,7 +3,10 @@
 
 
 @media screen  and (max-width:768px) {
+
+
     main {
+        overflow-x: hidden;
         width: 100%;
         display: flex;
         flex-direction: column;
