--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@
 }
 
 .grid-container {
+  overflow-x: hidden;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
   grid-gap: 20px;
@@ -200,6 +201,7 @@ footer {
 
 @media screen and (max-width: 768px) {
   main {
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
