resized mobile layout

--- a/main.css
+++ b/main.css
@@ -216,6 +216,14 @@ footer {
     display: flex;
   }
 
+  .about-container__rightside {
+    display: none;
+  }
+
+  .about-container__leftside {
+    text-align: left;
+  }
+
   footer {
     width: 768px;
   }
