changes to mobile font sizes

--- a/main.css
+++ b/main.css
@@ -245,6 +245,14 @@ footer {
     border-radius: 8px;
     scroll-snap-align: start;
   }
+
+  .contact__h1 {
+    font-size: 75px;
+  }
+
+  .about-container__leftside {
+    width: 50%;
+  }
 }
 body {
   background-color: #2c2a2a;
