--- a/main.scss
+++ b/main.scss
@@ -52,6 +52,14 @@
             border-radius: 8px;
             scroll-snap-align: start;
         }
+
+    .contact__h1 {
+        font-size: 75px;
+    }
+
+    .about-container__leftside {
+        width: 50%;
+    }
     } 
 
 
