changes made to sizing

--- a/Sass/_sections.css
+++ b/Sass/_sections.css
@@ -56,7 +56,7 @@
 }
 
 .grid-container {
-  overflow-x: hidden;
+  overflow-x: scroll;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
   grid-gap: 20px;
