--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@
 }
 
 .grid-container {
-  overflow-x: hidden;
+  overflow-x: scroll;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
   grid-gap: 20px;
@@ -201,18 +201,21 @@ footer {
 
 @media screen and (max-width: 768px) {
   main {
-    width: 100%;
+    margin-left: 75px;
+    width: 100vh;
     display: flex;
     flex-direction: column;
   }
 
   .heading {
     width: 100%;
-    justify-content: space-between;
   }
   .heading__links {
     width: 100%;
     display: flex;
+  }
+  .heading__link {
+    display: none;
   }
 
   .about-container__rightside {
@@ -221,6 +224,8 @@ footer {
 
   .about-container__leftside {
     text-align: left;
+    padding: 30px;
+    padding-bottom: 50px;
   }
 
   footer {
