--- a/Sass/_sections.css
+++ b/Sass/_sections.css
@@ -55,7 +55,7 @@
   line-height: 102.4px;
 }
 
-.grid-container {
+.portfolio-section {
   overflow-x: scroll;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
