--- a/main.scss
+++ b/main.scss
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
     }
-    
+
     .heading {
         width: 100%;
 
@@ -40,7 +40,7 @@
         width: 768px;
     }
 
-    .grid-container {
+    .portfolio-section {
             display: flex;
             overflow-x: scroll;
             padding: 24px;
@@ -51,7 +51,7 @@
             gap: 12px;
         }
         
-    .grid-container .content-flex {
+    .portfolio-section .content-flex {
             flex: 50% 0% 100%;
             padding: 24px;
             border-radius: 8px;
