--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@
   line-height: 102.4px;
 }
 
-.grid-container {
+.portfolio-section {
   overflow-x: scroll;
   display: grid;
   grid-template-areas: "PROJECT1 PROJECT2 PROJECT3" "PROJECT4 PROJECT5 PROJECT6";
@@ -232,7 +232,7 @@ footer {
     width: 768px;
   }
 
-  .portfolio-section {
+  .grid-container {
     display: flex;
     overflow-x: scroll;
     padding: 24px;
@@ -243,7 +243,7 @@ footer {
     gap: 12px;
   }
 
-  .portfolio-section .content-flex {
+  .grid-container .content-flex {
     flex: 50% 0% 100%;
     padding: 24px;
     border-radius: 8px;
