--- a/Sass/_sections.scss
+++ b/Sass/_sections.scss
@@ -181,6 +181,7 @@ h2Project6 {
         flex-wrap: wrap;
         justify-content: space-between;
         width: 33%;
+        padding-top: 75px;
     }
 
     &__about{
