all changes to styles and text

--- a/Sass/_sections.css
+++ b/Sass/_sections.css
@@ -117,6 +117,7 @@ h2Project6 {
   font-family: "Cormorant", sans-serif;
   font-size: 42px;
   line-height: 67.2px;
+  cursor: pointer;
 }
 
 /* about section showing header and 2 p tags with an image next to it */
